style: video play button cursor
- Changed the cursor to indicate click

--- a/style.css
+++ b/style.css
@@ -907,6 +907,10 @@
   color: #fff;
 }
 
+.v-icon {
+  cursor: pointer;
+}
+
 @media (max-width: 550px) {
   .video-wrapper {
     -webkit-box-orient: vertical;
