Added input in search-bar
- Added input tag in search bar

--- a/style.css
+++ b/style.css
@@ -466,6 +466,23 @@
   cursor: text;
 }
 
+.search-input {
+  width: 100%;
+  height: 100%;
+  padding: 0 0 0 10px;
+  border: none;
+  outline: none;
+  font-family: "Lato", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+  font-size: 14px;
+  background: none;
+}
+
 @media (max-width: 768px) {
   .search-bar {
     height: 50px;
