style: video content
- Video content padding fixed

--- a/style.css
+++ b/style.css
@@ -1010,7 +1010,8 @@
 
 .video-content {
   margin-left: 28px;
-  max-width: 317px;
+  margin-right: 10px;
+  max-width: 327px;
   padding-bottom: 1113px;
 }
 
